# wphash-vuln-data

./: .gitignore  README.md
advisories/: WPHSH-0019035098ac-0cf0028423f3.json  WPHSH-001d057c4988-59a2181609e8.json  WPHSH-001d057c4988-6ddcbf3f68c3.json  WPHSH-001d057c4988-a9fbab707b5d.json  WPHSH-0027791199c3-5d176c672231.json  WPHSH-0027791199c3-dc00a8948242.json  WPHSH-0046c685ea8a-4ff1f0e229a2.json  WPHSH-0046c685ea8a-ffdee96d9aff.json  WPHSH-00870cf266e6-c561b7c2ee30.json  WPHSH-00c1dbe195fd-6d98d4e73c60.json  WPHSH-00c1dbe195fd-e3e194717e55.json  WPHSH-00d094766c35-a6e63321e40a.json  WPHSH-00e080f77c3a-fc3031b65274.json  WPHSH-012438b2fecb-2343836a821a.json  WPHSH-015cff1b40f2-4b922c257a78.json  WPHSH-017a31b038c5-0967358550bc.json  WPHSH-017a31b038c5-3619679bbd08.json  WPHSH-017a31b038c5-4cc8bb33afc3.json  WPHSH-017a31b038c5-4d605d2a89e0.json  WPHSH-017a31b038c5-81260636ec16.json  WPHSH-017a31b038c5-9f4318551576.json  WPHSH-017a31b038c5-c8f76291b1b1.json  WPHSH-017a31b038c5-d04b68e5cc68.json  WPHSH-017a31b038c5-e992c2efd872.json  WPHSH-01a779f9c0cf-deebdf890827.json  WPHSH-01d68703569b-f43f77ee0ed9.json  WPHSH-01e6e108bc15-4356cbb633ed.json  WPHSH-01e6e108bc15-a1e26a4b3afb.json  WPHSH-021e72da803a-a8bb6dfc45fc.json  WPHSH-02237664eb28-0dea07e7c469.json  WPHSH-02237664eb28-cc85ad41ae0b.json  (+2765 more)
utils/: fetch_new_nvd_entries.py  new_advisory.py  nvd.py  nvd_to_osv.py  nvd_to_ovs.py  pyproject.toml  refresh_seen_cves.py  sort_disputed.py  sort_plugin.py  sort_wp.py  validate.py
utils/data/: cwe_map.json  cwe_map_short.json  seen_cves.txt
(+587 files in other folders)
