[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["dave <dave@cyllective.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.1"
jsonschema = "^4.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
